wip: registry render

--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-svc-statefulset.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-svc-statefulset.yml.j2
@@ -73,7 +73,7 @@ spec:
 {%   endif %}
     spec:
       volumes:
-        - name: rregistry-vol
+        - name: registry-vol
 {% if boss__registry__enable_pvc %}
           persistentVolumeClaim:
             claimName: registry-pvc
