wip: registry render

--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-svc-statefulset.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-svc-statefulset.yml.j2
@@ -118,9 +118,10 @@ spec:
         volumeMounts:
         - name: registry-vol-mount
           mountPath: /data
+{% if boss__registry__enable_pvc %}
         - name: registry-pvc
           mountPath: /var/lib/registry
-
+{% endif %}
 {% if boss__registry__enable_tls %}
         - name: config
           mountPath: /etc/docker/registry
