--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/99registry-cert-tls.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/99registry-cert-tls.yml.j2
@@ -25,6 +25,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: docker-registry
+  namespace: {{boss__registry__namespace_name}}
 type: Opaque
 data:
   HTPASSWD: {{htpasswd_base64}}
@@ -34,6 +35,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: docker-registry
+  namespace: {{boss__registry__namespace_name}}
 data:
   registry-config.yml: |
     version: 0.1
