wip: registry render

--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/99registry-from-helm.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/99registry-from-helm.yml.j2
@@ -67,8 +67,9 @@ data:
         # SOURCE: https://github.com/Joxit/docker-registry-ui
         X-Content-Type-Options: [nosniff]
         # Access-Control-Allow-Origin: ['http://127.0.0.1:8001']
+        Access-Control-Allow-Origin: ['http://registry-ui.hyenaclan.org']
         # If your docker registry does not need credentials, you will need to send this HEADER:
-        Access-Control-Allow-Origin: ['*']
+        # Access-Control-Allow-Origin: ['*']
 
         # NOTE: If your docker registry need credentials, you will need to send these HEADERS:
         # Access-Control-Allow-Origin: '<your docker-registry-ui url>'
