--- a/extra_playbooks/roles/kubernetes-apps/jenkins-k8/templates/99jenkins-from-helm.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/jenkins-k8/templates/99jenkins-from-helm.yaml.j2
@@ -4,12 +4,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: RELEASE-NAME-jenkins
+  name: jenkins
   labels:
-    app: RELEASE-NAME-jenkins
-    chart: "jenkins-0.28.11"
-    release: "RELEASE-NAME"
-    heritage: "Tiller"
+    app: jenkins
+    # chart: "jenkins-0.28.11"
+    # release: "RELEASE-NAME"
+    # heritage: "Tiller"
 type: Opaque
 data:
 
@@ -23,14 +23,14 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: RELEASE-NAME-jenkins
+  name: jenkins
 data:
   config.xml: |-
     <?xml version='1.0' encoding='UTF-8'?>
     <hudson>
       <disabledAdministrativeMonitors/>
       <version>lts</version>
-      <numExecutors>0</numExecutors>
+      <numExecutors>2</numExecutors>
       <mode>NORMAL</mode>
       <useSecurity>true</useSecurity>
       <authorizationStrategy class="hudson.security.FullControlOnceLoggedInAuthorizationStrategy">
@@ -54,7 +54,7 @@ data:
               <name>default</name>
               <instanceCap>2147483647</instanceCap>
               <idleMinutes>0</idleMinutes>
-              <label>RELEASE-NAME-jenkins-slave </label>
+              <label>jenkins-slave </label>
               <nodeSelector></nodeSelector>
                 <nodeUsageMode>NORMAL</nodeUsageMode>
               <volumes>
@@ -79,7 +79,7 @@ data:
                   <envVars>
                     <org.csanchez.jenkins.plugins.kubernetes.ContainerEnvVar>
                       <key>JENKINS_URL</key>
-                      <value>http://RELEASE-NAME-jenkins:8080</value>
+                      <value>http://jenkins:8080</value>
                     </org.csanchez.jenkins.plugins.kubernetes.ContainerEnvVar>
                   </envVars>
                 </org.csanchez.jenkins.plugins.kubernetes.ContainerTemplate>
@@ -93,8 +93,8 @@ data:
           <serverUrl>https://kubernetes.default</serverUrl>
           <skipTlsVerify>false</skipTlsVerify>
           <namespace>default</namespace>
-          <jenkinsUrl>http://RELEASE-NAME-jenkins:8080</jenkinsUrl>
-          <jenkinsTunnel>RELEASE-NAME-jenkins-agent:50000</jenkinsTunnel>
+          <jenkinsUrl>http://jenkins:8080</jenkinsUrl>
+          <jenkinsTunnel>jenkins-agent:50000</jenkinsTunnel>
           <containerCap>10</containerCap>
           <retentionTimeout>5</retentionTimeout>
           <connectTimeout>0</connectTimeout>
@@ -131,7 +131,7 @@ data:
     <?xml version='1.1' encoding='UTF-8'?>
     <jenkins.model.JenkinsLocationConfiguration>
       <adminAddress></adminAddress>
-      <jenkinsUrl>http://RELEASE-NAME-jenkins:8080</jenkinsUrl>
+      <jenkinsUrl>http://jenkins:8080</jenkinsUrl>
     </jenkins.model.JenkinsLocationConfiguration>
   jenkins.CLI.xml: |-
     <?xml version='1.1' encoding='UTF-8'?>
@@ -163,11 +163,11 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: RELEASE-NAME-jenkins-tests
+  name: jenkins-tests
 data:
   run.sh: |-
     @test "Testing Jenkins UI is accessible" {
-      curl --retry 48 --retry-delay 10 RELEASE-NAME-jenkins:8080/login
+      curl --retry 48 --retry-delay 10 jenkins:8080/login
     }
 
 ---
@@ -175,12 +175,12 @@ data:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: RELEASE-NAME-jenkins
+  name: jenkins
   labels:
-    app: RELEASE-NAME-jenkins
-    chart: "jenkins-0.28.11"
-    release: "RELEASE-NAME"
-    heritage: "Tiller"
+    app: jenkins
+    # chart: "jenkins-0.28.11"
+    # release: "RELEASE-NAME"
+    # heritage: "Tiller"
 spec:
   accessModes:
     - "ReadWriteOnce"
@@ -193,12 +193,12 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: RELEASE-NAME-jenkins
+  name: jenkins
   labels:
-    app: RELEASE-NAME-jenkins
-    chart: "jenkins-0.28.11"
-    release: "RELEASE-NAME"
-    heritage: "Tiller"
+    app: jenkins
+    # chart: "jenkins-0.28.11"
+    # release: "RELEASE-NAME"
+    # heritage: "Tiller"
 
 ---
 # Source: jenkins/templates/rbac.yaml
@@ -206,19 +206,19 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: RELEASE-NAME-jenkins-role-binding
+  name: jenkins-role-binding
   labels:
-    app: RELEASE-NAME-jenkins
-    chart: "jenkins-0.28.11"
-    release: "RELEASE-NAME"
-    heritage: "Tiller"
+    app: jenkins
+    # chart: "jenkins-0.28.11"
+    # release: "RELEASE-NAME"
+    # heritage: "Tiller"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
 - kind: ServiceAccount
-  name: RELEASE-NAME-jenkins
+  name: jenkins
   namespace: default
 
 
@@ -227,11 +227,11 @@ subjects:
 apiVersion: v1
 kind: Service
 metadata:
-  name: RELEASE-NAME-jenkins-agent
+  name: jenkins-agent
   labels:
-    app: RELEASE-NAME-jenkins
-    chart: "jenkins-0.28.11"
-    component: "RELEASE-NAME-jenkins-master"
+    app: jenkins
+    # chart: "jenkins-0.28.11"
+    component: "jenkins-master"
 spec:
   ports:
     - port: 50000
@@ -239,7 +239,7 @@ spec:
 
       name: slavelistener
   selector:
-    component: "RELEASE-NAME-jenkins-master"
+    component: "jenkins-master"
   type: ClusterIP
 
 ---
@@ -247,13 +247,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: RELEASE-NAME-jenkins
+  name: jenkins
   labels:
-    app: RELEASE-NAME-jenkins
-    heritage: "Tiller"
-    release: "RELEASE-NAME"
-    chart: "jenkins-0.28.11"
-    component: "RELEASE-NAME-jenkins-master"
+    app: jenkins
+    # heritage: "Tiller"
+    # release: "RELEASE-NAME"
+    # chart: "jenkins-0.28.11"
+    component: "jenkins-master"
     addonmanager.kubernetes.io/mode: Reconcile
     boss-part-of: jenkins
     k8s-app: jenkins
@@ -270,7 +270,7 @@ spec:
       targetPort: 8080
 
   selector:
-    component: "RELEASE-NAME-jenkins-master"
+    component: "jenkins-master"
   type: LoadBalancer
 
   loadBalancerSourceRanges:
@@ -284,7 +284,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "RELEASE-NAME-ui-test-bcm3w"
+  name: "ui-test-bcm3w"
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -302,7 +302,7 @@ spec:
       - mountPath: /tools
         name: tools
   containers:
-    - name: RELEASE-NAME-ui-test
+    - name: ui-test
       image: jenkins/jenkins:lts
       command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
       volumeMounts:
@@ -314,7 +314,7 @@ spec:
   volumes:
   - name: tests
     configMap:
-      name: RELEASE-NAME-jenkins-tests
+      name: jenkins-tests
   - name: tools
     emptyDir: {}
   restartPolicy: Never
@@ -325,12 +325,12 @@ spec:
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: RELEASE-NAME-jenkins
+  name: jenkins
   labels:
-    heritage: "Tiller"
-    release: "RELEASE-NAME"
-    chart: "jenkins-0.28.11"
-    component: "RELEASE-NAME-jenkins-master"
+    # heritage: "Tiller"
+    # release: "RELEASE-NAME"
+    # chart: "jenkins-0.28.11"
+    component: "jenkins-master"
     addonmanager.kubernetes.io/mode: "Reconcile"
     boss-part-of: "jenkins"
     k8s-app: "jenkins"
@@ -342,22 +342,22 @@ spec:
     type: Recreate
   selector:
     matchLabels:
-      component: "RELEASE-NAME-jenkins-master"
+      component: "jenkins-master"
   template:
     metadata:
       labels:
-        app: RELEASE-NAME-jenkins
-        heritage: "Tiller"
-        release: "RELEASE-NAME"
-        chart: "jenkins-0.28.11"
-        component: "RELEASE-NAME-jenkins-master"
+        app: jenkins
+        # heritage: "Tiller"
+        # release: "RELEASE-NAME"
+        # chart: "jenkins-0.28.11"
+        component: "jenkins-master"
       annotations:
         checksum/config: 8f2b77455630692b2b60ef15e2d7afce2f68cd442f032e14068b404e0926e418
     spec:
       securityContext:
         runAsUser: 1000
         fsGroup: 1000
-      serviceAccountName: RELEASE-NAME-jenkins
+      serviceAccountName: jenkins
       initContainers:
         - name: "copy-default-config"
           image: "jenkins/jenkins:lts"
@@ -385,7 +385,7 @@ spec:
               mountPath: /usr/share/jenkins/ref/secrets/
               name: secrets-dir
       containers:
-        - name: RELEASE-NAME-jenkins
+        - name: jenkins
           image: "jenkins/jenkins:lts"
           imagePullPolicy: "Always"
           args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
@@ -397,12 +397,12 @@ spec:
             - name: ADMIN_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: RELEASE-NAME-jenkins
+                  name: jenkins
                   key: jenkins-admin-password
             - name: ADMIN_USER
               valueFrom:
                 secretKeyRef:
-                  name: RELEASE-NAME-jenkins
+                  name: jenkins
                   key: jenkins-admin-user
           ports:
             - containerPort: 8080
@@ -455,14 +455,14 @@ spec:
       volumes:
       - name: jenkins-config
         configMap:
-          name: RELEASE-NAME-jenkins
+          name: jenkins
       - name: plugin-dir
         emptyDir: {}
       - name: secrets-dir
         emptyDir: {}
       - name: jenkins-home
         persistentVolumeClaim:
-          claimName: RELEASE-NAME-jenkins
+          claimName: jenkins
 ---
 # Source: jenkins/templates/jenkins-backup-cronjob.yaml
 
